bugfixes and handling of memory settings changes